# fastly-compute-otel-rust

./: .gitignore  Cargo.toml  LICENSE  README.md  fastly.toml  rust-toolchain.toml
.cargo/: config.toml
.github/: dependabot.yaml
.github/workflows/: tests.yaml
src/: convert.rs  init.rs  lib.rs  logs.rs  otlp.rs  propagation.rs  traces.rs
tests/: viceroy.rs
