[package]
name = "fastly-compute-otel"
version = "0.1.0"
edition = "2021"
rust-version = "1.82"
license = "Apache-2.0"
description = "OpenTelemetry log and trace export for Fastly Compute (Rust), using named log providers as transport"
repository = "https://github.com/case/fastly-compute-otel-rust"
keywords = ["opentelemetry", "fastly", "compute", "wasm", "observability"]
categories = ["development-tools::profiling", "wasm"]

[features]
default = ["trace", "logs"]
trace = ["opentelemetry/trace", "opentelemetry_sdk/trace", "base64"]
logs = ["opentelemetry/logs", "opentelemetry_sdk/logs", "base64"]

[dependencies]
base64 = { version = "0.22", optional = true }
fastly = "0.11"
opentelemetry = { version = "0.31", default-features = false }
opentelemetry_sdk = { version = "0.31", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
